--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/ExamGenerator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\bruno\\Downloads\\jar_files\\controlsfx-8.40.11.jar
+file.reference.MathParser.org-mXparser-4.2.0.jar=C:\\Users\\bruno\\Downloads\\jar_files\\MathParser.org-mXparser-4.2.0.jar
 file.reference.mysql-connector-java-8.0.13.jar=mysql-connector-java-8.0.13/mysql-connector-java-8.0.13.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,7 +38,9 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.13.jar}
+    ${file.reference.mysql-connector-java-8.0.13.jar}:\
+    ${file.reference.MathParser.org-mXparser-4.2.0.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
